# libactor-cheri

./: .clang-format  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  example.c  http_server.c
include/libactor/: actor.h  list.h
src/: CMakeLists.txt  actor.c  actor.h  list.c
tests/: CMakeLists.txt  capability_sharing.c  message_editing.c
